--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@prisma/client": "^5.12.0",
+    "prisma": "^5.12.0"
+  }
 }
