--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -9,11 +9,21 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
-    "@repo/ui": "*",
+    "@repo/components": "*",
     "@repo/db": "*",
+    "@repo/ui": "*",
+    "@tsparticles/engine": "^3.3.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.3.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.25",
     "next": "^14.1.1",
+    "next-auth": "^4.24.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.1",
