--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   ],
   "dependencies": {
     "@prisma/client": "^5.12.0",
-    "prisma": "^5.12.0"
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.25",
+    "prisma": "^5.12.0",
+    "recoil": "^0.7.7",
+    "tailwind-merge": "^2.2.2"
   }
 }
