--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^11.0.25",
     "next": "^14.1.1",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.2"
