--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,16 +1,18 @@
 {
   "name": "@repo/db",
-  "version": "0.0.0",
-  "dependencies": {
-    "@prisma/client": "^5.11.0"
-  },
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "devDependencies": {
-    "prisma": "5.11.0"
+    "@types/node": "^20.12.7",
+    "prisma": "^5.12.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   },
-  "exports": {
-    "./client": "./index.ts"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
