--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -15,10 +15,13 @@
     "@tsparticles/engine": "^3.3.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.3.0",
+    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.2",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.25",
+    "jsonwebtoken": "^9.0.2",
     "next": "^14.1.1",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
@@ -31,6 +34,7 @@
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "@types/eslint": "^8.56.5",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
