bank connects to webhook and updates balance

--- a/apps/bank-app/package.json
+++ b/apps/bank-app/package.json
@@ -9,8 +9,9 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
-    "@repo/ui": "*",
     "@repo/db": "*",
+    "@repo/ui": "*",
+    "axios": "^1.6.8",
     "next": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
