--- a/apps/bank-app/package.json
+++ b/apps/bank-app/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.6.8",
     "next": "^14.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.1",
