--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.15",
     "@repo/components": "*",
     "@repo/db": "*",
     "@repo/ui": "*",
@@ -27,6 +30,7 @@
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
