--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "@mui/material": "^5.15.15",
     "@repo/components": "*",
     "@repo/db": "*",
@@ -25,6 +26,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
     "jsonwebtoken": "^9.0.2",
+    "mdb-react-ui-kit": "^8.0.0",
     "next": "^14.1.1",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
