updated for deployment

--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "name": "starter-template",
   "private": true,
   "scripts": {
-    "build": "turbo build",
     "dev": "turbo dev",
+    "build": "turbo build",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "build-user-app": "cd ./apps/user-app && npm run build",
+    "build-bank-app": "cd ./apps/bank-app && npm run build",
+    "build-webhook-app": "cd ./apps/bank-webhook && npm run build",
+
+    "start-user-app": "cd ./apps/user-app && npm run start",
+    "start-bank-app": "cd ./apps/bank-app && npm run start",
+    "start-webhook-app": "cd ./apps/bank-webhook && npm run start",
     "generate":"cd packages/db && npx prisma generate && cd ../.."
   },
   "devDependencies": {
