--- a/apps/bank-webhook/package.json
+++ b/apps/bank-webhook/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "vitest",
     "build": "npx esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js",
-    "start": "node dist/index.js",
+    "start": "node dist/index.js --port 3002",
     "dev": "npm run build && npm run start"
   },
   "keywords": [],
@@ -17,5 +18,9 @@
     "body-parser": "^1.20.2",
     "esbuild": "^0.20.2",
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "vitest": "^1.6.0",
+    "vitest-mock-extended": "^1.3.1"
   }
 }
