--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3001",
+    "dev": "next dev --port 3000",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --port 3000",
     "lint": "eslint . --max-warnings 0",
     "start-user-app": "cd ./apps/user-app && npm run start"
   },
