--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
-name: Build and Push to Docker Hub
+name: Build and Deploy to Docker Hub
 
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   build-and-push:
@@ -13,15 +13,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Build and Push Docker Images
+      - name: Build and Push Docker images
         run: |
-          docker-compose  build
-          docker-compose  push
+          docker-compose -f docker-compose.yml build
+          docker-compose -f docker-compose.yml push
