--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,5 +20,5 @@ jobs:
 
       - name: Build and Push Docker images
         run: |
-          docker-compose -f docker-compose.yml  build
+          docker-compose build --build-arg DATABASE_URL=${{ secrets.DATABASE_URL }}
           docker-compose -f docker-compose.yml  push
