--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
     steps:
       - name: Check Out Repo
         uses: actions/checkout@v2
@@ -21,4 +23,4 @@ jobs:
       - name: Build and Push Docker images
         run: |
           docker-compose build --build-arg DATABASE_URL=${{ secrets.DATABASE_URL }}
-          docker-compose -f docker-compose.yml  push
+          docker-compose -f docker-compose.yml push
