--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile.user
+    image: userapp # Specify the image name here
     ports:
       - "3000:3000"
     volumes:
@@ -15,6 +16,7 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile.bank
+    image: bankapp  # Specify the image name here
     ports:
       - "3001:3001"
     volumes:
@@ -26,6 +28,7 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile.webhook
+    image: webhook  # Specify the image name here
     ports:
       - "3002:3002"
     volumes:
