--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,4 +23,13 @@ jobs:
       - name: Build and Push Docker images
         run: |
           docker-compose build --build-arg DATABASE_URL=${{ secrets.DATABASE_URL }}
-          docker-compose -f docker-compose.yml push
+          docker-compose push
+
+      - name: SSH and Deploy to EC2
+        uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            /home/ubuntu/deploy.sh
