--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^11.1.7",
     "jsonwebtoken": "^9.0.2",
     "mdb-react-ui-kit": "^8.0.0",
