--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -31,7 +31,7 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "font-awesome": "^4.7.0",
-    "framer-motion": "^11.1.7",
+    "framer-motion": "^11.2.13",
     "jsonwebtoken": "^9.0.2",
     "mdb-react-ui-kit": "^8.0.0",
     "next": "^14.1.1",
@@ -39,6 +39,8 @@
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
+    "react-chartjs-2": "^5.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.3.0"
